--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Aitor Carrillo
-email: ""
+email: "footballcloudnet@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
   La velocidad del cerebro es más importante que la de las piernas.
 #baseurl: "" # the subpath of your site, e.g. /blog
